--- a/src/Resources/config/twig.yaml
+++ b/src/Resources/config/twig.yaml
@@ -1,3 +1,4 @@
 twig:
+  form_themes: ['bootstrap_4_layout.html.twig']
   paths:
     '%kernel.project_dir%/vendor/zentlix/block-bundle/src/UI/Http/Web/templates': BlockBundle
